fixed readability

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url("https://api.fontshare.com/v2/css?f[]=satoshi@900,300,400&display=swap");
-*{
-    font-family: 'Satoshi', sans-serif;
+* {
+  font-family: "Satoshi", sans-serif;
 }
 
-body{
+body {
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -12,13 +12,13 @@ body{
   cursor: none;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
 ::selection {
-  background-color:#161616;
-  color: #e7e7e7; 
+  background-color: #161616;
+  color: #e7e7e7;
 }
 
 ::-moz-selection {
